@@ -2,17 +2,17 @@
 // * ajax.js:
   /*extern sajax_init_object, sajax_do_call */
 // * wikibits.js:
-  /*extern changeText, akeytt, hookEvent */
+  /*extern changeText, akeytt, hookEvent, alertMsg */
 
 // These should have been initialized in the generated js
-/*extern wgAjaxWatch, wgArticleId */
+/*extern wgAjaxWatch, wgPageName */
 
 if(typeof wgAjaxWatch === "undefined" || !wgAjaxWatch) {
 	var wgAjaxWatch = {
 		watchMsg: "Watch",
 		unwatchMsg: "Unwatch",
 		watchingMsg: "Watching...",
-		unwatchingMsg: "Unwatching..."
+		unwatchingMsg: "Unwatching...",
 	};
 }
 
@@ -20,32 +20,52 @@ wgAjaxWatch.supported = true; // supported on current page and by browser
 wgAjaxWatch.watching = false; // currently watching page
 wgAjaxWatch.inprogress = false; // ajax request in progress
 wgAjaxWatch.timeoutID = null; // see wgAjaxWatch.ajaxCall
-wgAjaxWatch.watchLink1 = null; // "watch"/"unwatch" link
-wgAjaxWatch.watchLink2 = null; // second one, for (some?) non-Monobook-based
-wgAjaxWatch.oldHref = null; // url for action=watch/action=unwatch
+wgAjaxWatch.watchLinks = []; // "watch"/"unwatch" links
 
 wgAjaxWatch.setLinkText = function(newText) {
-	changeText(wgAjaxWatch.watchLink1, newText);
-	if (wgAjaxWatch.watchLink2) {
-		changeText(wgAjaxWatch.watchLink2, newText);
+	for (i = 0; i < wgAjaxWatch.watchLinks.length; i++) {
+		changeText(wgAjaxWatch.watchLinks[i], newText);
 	}
 };
 
 wgAjaxWatch.setLinkID = function(newId) {
-	wgAjaxWatch.watchLink1.id = newId;
+	// We can only set the first one
+	wgAjaxWatch.watchLinks[0].setAttribute( 'id', newId );
 	akeytt(newId); // update tooltips for Monobook
 };
 
+wgAjaxWatch.setHref = function( string ) {
+	for( i = 0; i < wgAjaxWatch.watchLinks.length; i++ ) {
+		if( string == 'watch' ) {
+			wgAjaxWatch.watchLinks[i].href = wgAjaxWatch.watchLinks[i].href
+				.replace( /&action=unwatch/, '&action=watch' );
+		} else if( string == 'unwatch' ) {
+			wgAjaxWatch.watchLinks[i].href = wgAjaxWatch.watchLinks[i].href
+				.replace( /&action=watch/, '&action=unwatch' );
+		}
+	}
+}
+
 wgAjaxWatch.ajaxCall = function() {
-	if(!wgAjaxWatch.supported || wgAjaxWatch.inprogress) {
-		return;
+	if(!wgAjaxWatch.supported) {
+		return true;
+	} else if (wgAjaxWatch.inprogress) {
+		return false;
 	}
 	wgAjaxWatch.inprogress = true;
-	wgAjaxWatch.setLinkText(wgAjaxWatch.watching ? wgAjaxWatch.unwatchingMsg : wgAjaxWatch.watchingMsg);
-	sajax_do_call("wfAjaxWatch", [wgArticleId, (wgAjaxWatch.watching ? "u" : "w")], wgAjaxWatch.processResult);
+	wgAjaxWatch.setLinkText( wgAjaxWatch.watching
+		? wgAjaxWatch.unwatchingMsg : wgAjaxWatch.watchingMsg);
+	sajax_do_call(
+		"wfAjaxWatch",
+		[wgPageName, (wgAjaxWatch.watching ? "u" : "w")], 
+		wgAjaxWatch.processResult
+	);
 	// if the request isn't done in 10 seconds, allow user to try again
-	wgAjaxWatch.timeoutID = window.setTimeout(function() { wgAjaxWatch.inprogress = false; }, 10000);
-	return;
+	wgAjaxWatch.timeoutID = window.setTimeout(
+		function() { wgAjaxWatch.inprogress = false; },
+		10000
+	);
+	return false;
 };
 
 wgAjaxWatch.processResult = function(request) {
@@ -53,20 +73,21 @@ wgAjaxWatch.processResult = function(request) {
 		return;
 	}
 	var response = request.responseText;
-	if(response == "<err#>") {
-		window.location.href = wgAjaxWatch.oldHref;
+	if( response.match(/^<err#>/) ) {
+		window.location.href = wgAjaxWatch.watchLink1.href;
 		return;
-	} else if(response == "<w#>") {
+	} else if( response.match(/^<w#>/) ) {
 		wgAjaxWatch.watching = true;
 		wgAjaxWatch.setLinkText(wgAjaxWatch.unwatchMsg);
 		wgAjaxWatch.setLinkID("ca-unwatch");
-		wgAjaxWatch.oldHref = wgAjaxWatch.oldHref.replace(/action=watch/, "action=unwatch");
-	} else if(response == "<u#>") {
+		wgAjaxWatch.setHref( 'unwatch' );
+	} else if( response.match(/^<u#>/) ) {
 		wgAjaxWatch.watching = false;
 		wgAjaxWatch.setLinkText(wgAjaxWatch.watchMsg);
 		wgAjaxWatch.setLinkID("ca-watch");
-		wgAjaxWatch.oldHref = wgAjaxWatch.oldHref.replace(/action=unwatch/, "action=watch");
+		wgAjaxWatch.setHref( 'watch' );
 	}
+	jsMsg( response.substr(4), 'watch' );
 	wgAjaxWatch.inprogress = false;
 	if(wgAjaxWatch.timeoutID) {
 		window.clearTimeout(wgAjaxWatch.timeoutID);
@@ -75,6 +96,8 @@ wgAjaxWatch.processResult = function(request) {
 };
 
 wgAjaxWatch.onLoad = function() {
+	// This document structure hardcoding sucks.  We should make a class and
+	// toss all this out the window.
 	var el1 = document.getElementById("ca-unwatch");
 	var el2 = null;
 	if (!el1) {
@@ -103,13 +126,17 @@ wgAjaxWatch.onLoad = function() {
 
 	// The id can be either for the parent (Monobook-based) or the element
 	// itself (non-Monobook)
-	wgAjaxWatch.watchLink1 = el1.tagName.toLowerCase() == "a" ? el1 : el1.firstChild;
-	wgAjaxWatch.watchLink2 = el2 ? el2 : null;
+	wgAjaxWatch.watchLinks.push( el1.tagName.toLowerCase() == "a"
+		? el1 : el1.firstChild );
 
-	wgAjaxWatch.oldHref = wgAjaxWatch.watchLink1.getAttribute("href");
-	wgAjaxWatch.watchLink1.setAttribute("href", "javascript:wgAjaxWatch.ajaxCall()");
-	if (wgAjaxWatch.watchLink2) {
-		wgAjaxWatch.watchLink2.setAttribute("href", "javascript:wgAjaxWatch.ajaxCall()");
+	if( el2 ) {
+		wgAjaxWatch.watchLinks.push( el2 );
+	}
+
+	// I couldn't get for (watchLink in wgAjaxWatch.watchLinks) to work, if
+	// you can be my guest.
+	for( i = 0; i < wgAjaxWatch.watchLinks.length; i++ ) {
+		wgAjaxWatch.watchLinks[i].onclick = wgAjaxWatch.ajaxCall;
 	}
 	return;
 };
